feat: fixed warnings